# tapws

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump.yml  codeql-analysis.yml  publish-docker-image.yml
tapws/: __init__.py  config.py  connection.py  device.py  server.py  test_config.py  test_server.py  test_utils.py  utils.py  wshandler.py
tapws/resources/static/css/: custom.css  style.css
tapws/resources/templates/: index.html  layout.html
tapws/server/: __init__.py  config.py  connection.py  server.py  test_config.py  test_server.py  test_tuntap.py  test_websocket.py  tuntap.py  websocket.py
tapws/services/: __init__.py  base.py  dhcp.py  tcp.py
tapws/services/dhcp/: __init__.py  config.py  database.py  lease.py  packet.py  packets.py  protocol.py  server.py  test_database.py  test_lease.py  utils.py
tapws/services/netfilter/: __init__.py  netfilter.py
