[tool.poetry]
name = "tapws"
version = "0.4.3"
description = "A simple virtual network interface over websocket"
authors = ["Pujianto <hello@pujianto.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dpkt = "1.9.7.2"
macaddress = "1.2.0"
python-iptables = "1.0.0"
python-pytun = "2.4.1"
uvloop = "0.16.0"
websockets = "10.3"

[tool.poetry.dev-dependencies]
bumpver = "^2022.1120"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pyright = "^1.1.308"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "v0.4.3"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"',
]
"tapws/__init__.py" = [
    "__version__ = \"{pep440_version}\""
]
"README.md" = [
    "version: {pep440_version}",
]